--- a/conda_env.yml
+++ b/conda_env.yml
@@ -6,74 +6,143 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
   - alembic=1.6.2=pyhd8ed1ab_0
+  - argon2-cffi=20.1.0=py39h27cfd23_1
+  - async_generator=1.10=pyhd3eb1b0_0
+  - attrs=21.2.0=pyhd3eb1b0_0
+  - backcall=0.2.0=pyhd3eb1b0_0
   - bcrypt=3.2.0=py39h3811e60_1
   - blas=1.0=mkl
+  - bleach=3.3.0=pyhd3eb1b0_0
   - brotlipy=0.7.0=py39h3811e60_1001
-  - ca-certificates=2021.4.13=h06a4308_1
-  - certifi=2020.12.5=py39h06a4308_0
+  - ca-certificates=2021.7.5=h06a4308_1
+  - certifi=2021.5.30=py39h06a4308_0
   - cffi=1.14.5=py39he32792d_0
   - chardet=4.0.0=py39hf3d152e_1
   - click=8.0.0=py39hf3d152e_0
   - cryptography=3.4.7=py39hbca0aa6_0
   - dataclasses=0.8=pyhc8e2a94_1
+  - dbus=1.13.18=hb2f20db_0
+  - decorator=5.0.9=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
   - editdistance=0.5.3=py39he80948d_3
+  - entrypoints=0.3=py39h06a4308_0
+  - expat=2.4.1=h2531618_2
   - flask=2.0.0=pyhd8ed1ab_0
   - flask-bcrypt=0.7.1=py_1
   - flask-migrate=2.4.0=py39hde42818_1
   - flask-script=2.0.6=py_0
   - flask-sqlalchemy=2.5.1=pyhd8ed1ab_0
+  - fontconfig=2.13.1=h6c09931_0
+  - freetype=2.10.4=h5ab3b9f_0
+  - glib=2.69.0=h5202010_0
   - greenlet=1.1.0=py39he80948d_0
-  - icu=68.1=h58526e2_0
+  - gst-plugins-base=1.14.0=h8213a91_2
+  - gstreamer=1.14.0=h28cd5cc_2
+  - icu=58.2=he6710b0_3
   - idna=2.10=pyh9f0ad1d_0
+  - importlib-metadata=3.10.0=py39h06a4308_0
+  - importlib_metadata=3.10.0=hd3eb1b0_0
   - intel-openmp=2021.2.0=h06a4308_610
+  - ipykernel=5.3.4=py39hb070fc8_0
+  - ipython=7.22.0=py39hb070fc8_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=7.6.3=pyhd3eb1b0_1
   - itsdangerous=2.0.0=pyhd8ed1ab_0
+  - jedi=0.17.2=py39h06a4308_1
   - jinja2=3.0.0=pyhd8ed1ab_0
   - joblib=1.0.1=pyhd8ed1ab_0
+  - jpeg=9b=h024ee3a_2
+  - jsonschema=3.2.0=py_2
+  - jupyter=1.0.0=py39h06a4308_7
+  - jupyter_client=6.1.12=pyhd3eb1b0_0
+  - jupyter_console=6.4.0=pyhd3eb1b0_0
+  - jupyter_core=4.7.1=py39h06a4308_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
   - ld_impl_linux-64=2.35.1=hea4e1c9_2
   - libffi=3.3=h58526e2_2
   - libgcc-ng=9.3.0=h2828fa1_19
   - libgomp=9.3.0=h2828fa1_19
   - libiconv=1.16=h516909a_0
+  - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=9.3.0=h6de172a_19
+  - libuuid=1.0.3=h1bed415_2
   - libuv=1.41.0=h7f98852_0
-  - libxml2=2.9.12=h72842e0_0
-  - libxslt=1.1.33=h15afd5d_2
+  - libxcb=1.14=h7b6447c_0
+  - libxml2=2.9.12=h03d6c58_0
+  - libxslt=1.1.34=hc22bd24_0
   - lxml=4.6.3=py39h107f48f_0
   - mako=1.1.4=pyh44b312d_0
   - markupsafe=2.0.0=py39h3811e60_0
+  - mistune=0.8.4=py39h27cfd23_1000
   - mkl=2021.2.0=h06a4308_296
   - mkl-service=2.3.0=py39h27cfd23_1
   - mkl_fft=1.3.0=py39h42c9631_2
   - mkl_random=1.2.1=py39ha9443f7_2
+  - nbclient=0.5.3=pyhd3eb1b0_0
+  - nbconvert=6.1.0=py39h06a4308_0
+  - nbformat=5.1.3=pyhd3eb1b0_0
   - ncurses=6.2=h58526e2_4
+  - nest-asyncio=1.5.1=pyhd3eb1b0_0
   - nltk=3.6.2=pyhd8ed1ab_0
-  - nodejs=15.14.0=h92b4a50_0
+  - nodejs=10.13.0=he6710b0_0
+  - notebook=6.4.0=py39h06a4308_0
   - numpy=1.20.1=py39h93e21f0_0
   - numpy-base=1.20.1=py39h7d8b39e_0
   - openssl=1.1.1k=h27cfd23_0
+  - packaging=21.0=pyhd3eb1b0_0
   - pandas=1.2.4=py39h2531618_0
+  - pandocfilters=1.4.3=py39h06a4308_1
+  - parso=0.7.0=py_0
+  - pcre=8.45=h295c915_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pip=21.1.1=pyhd8ed1ab_0
+  - prometheus_client=0.11.0=pyhd3eb1b0_0
+  - prompt-toolkit=3.0.17=pyh06a4308_0
+  - prompt_toolkit=3.0.17=hd3eb1b0_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pycparser=2.20=pyh9f0ad1d_2
+  - pygments=2.9.0=pyhd3eb1b0_0
   - pyopenssl=20.0.1=pyhd8ed1ab_0
+  - pyparsing=2.4.7=pyhd3eb1b0_0
+  - pyqt=5.9.2=py39h2531618_6
+  - pyrsistent=0.18.0=py39h7f8727e_0
   - pysocks=1.7.1=py39hf3d152e_3
   - python=3.9.4=hffdb5ce_0_cpython
   - python-dateutil=2.8.1=py_0
   - python-editor=1.0.4=py_0
   - python_abi=3.9=1_cp39
   - pytz=2021.1=pyhd3eb1b0_0
+  - pyzmq=20.0.0=py39h2531618_1
+  - qt=5.9.7=h5867ecd_1
+  - qtconsole=5.1.0=pyhd3eb1b0_0
+  - qtpy=1.9.0=py_0
   - readline=8.1=h46c0cb4_0
   - regex=2021.4.4=py39h3811e60_0
   - requests=2.25.1=pyhd3deb0d_0
+  - send2trash=1.5.0=pyhd3eb1b0_1
   - setuptools=49.6.0=py39hf3d152e_3
+  - sip=4.19.13=py39h2531618_0
   - six=1.16.0=pyh6c4a22f_0
   - sqlalchemy=1.4.15=py39h3811e60_0
   - sqlite=3.35.5=h74cdb3f_0
+  - terminado=0.9.4=py39h06a4308_0
+  - testpath=0.5.0=pyhd3eb1b0_0
   - tk=8.6.10=h21135ba_1
+  - tornado=6.1=py39h27cfd23_0
   - tqdm=4.60.0=pyhd8ed1ab_0
+  - traitlets=5.0.5=pyhd3eb1b0_0
   - tzdata=2021a=he74cb21_0
   - urllib3=1.26.4=pyhd8ed1ab_0
+  - wcwidth=0.2.5=py_0
+  - webencodings=0.5.1=py39h06a4308_1
   - werkzeug=2.0.0=pyhd8ed1ab_0
   - wheel=0.36.2=pyhd3deb0d_0
+  - widgetsnbextension=3.5.1=py39h06a4308_0
   - xz=5.2.5=h516909a_1
+  - zeromq=4.3.4=h2531618_0
+  - zipp=3.5.0=pyhd3eb1b0_0
   - zlib=1.2.11=h516909a_1010
 prefix: /crimea/conda_envs/prancer
