In progress, not remotely working.

--- a/static/.eslintrc
+++ b/static/.eslintrc
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "extends": "eslint-config-airbnb",
   "env": {
     "browser": true,
