--- a/static/package.json
+++ b/static/package.json
@@ -43,7 +43,6 @@
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
@@ -123,6 +122,8 @@
     "yargs": "^17.0.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@babel/register": "^7.14.5",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/lodash": "^4.14.171",
