--- a/static/package.json
+++ b/static/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --progress --verbose --colors --display-error-details --config webpack/common.config.js",
     "build:production": "npm run clean && npm run build",
     "lint": "eslint src",
-    "start": "node bin/server.js",
+    "start": "node --experimental-modules --es-module-specifier-resolution=node bin/server.js",
     "test": "karma start"
   },
   "repository": {
@@ -41,12 +41,6 @@
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-react-transform": "^3.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^5.0.2",
     "bootstrap-loader": "^3.0.4",
     "bootstrap-sass": "^3.4.1",
@@ -116,18 +110,21 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.46.0",
     "webpack-dev-middleware": "^5.0.0",
-    "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.8.0",
     "yargs": "^17.0.1"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/polyfill": "^7.12.1",
+    "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/lodash": "^4.14.171",
     "json-loader": "^0.5.7",
-    "list-react-files": "^0.2.0"
+    "list-react-files": "^0.2.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
