4 errors on webpack build.

--- a/static/bootstrap.rc
+++ b/static/bootstrap.rc
@@ -7,9 +7,9 @@ bootstrapVersion: 3
 
 # Webpack loaders, order matters
 styleLoaders:
-  - style
-  - css
-  - sass
+  - style-loader
+  - css-loader?sourceMap
+  - sass?sourceMap
 
 # Extract styles to stand-alone css file
 # Different settings for different environments can be used,
