--- a/static/.babelrc
+++ b/static/.babelrc
@@ -1,5 +1,8 @@
 {
-  "presets": ["@babel/preset-react", "@babel/preset-env"],
+  "presets": [
+    "@babel/preset-react",
+    ["@babel/preset-env", {"useBuiltIns": "usage", "corejs": 3}]
+  ],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     "@babel/plugin-transform-runtime"
