--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -1,11 +1,13 @@
 {
     "compilerOptions": {
+        "experimentalDecorators": true,
         "outDir": "./dist/",
         "sourceMap": true,
-        "module": "commonjs",
+        "module": "es2020",
+        "moduleResolution": "node",
         "noImplicitAny": true,
         "esModuleInterop": true,
-        "target": "es6",
+        "target": "es2019",
         "lib": [
             "es2019",
             "dom"
