--- a/static/package.json
+++ b/static/package.json
@@ -43,7 +43,6 @@
     "babel-plugin-react-transform": "^3.0.0",
     "bootstrap": "^5.0.2",
     "bootstrap-loader": "^3.0.4",
-    "bootstrap-sass": "^3.4.1",
     "bootstrap-webpack": "0.0.6",
     "classnames": "^2.3.1",
     "css-loader": "^6.2.0",
@@ -121,9 +120,11 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/lodash": "^4.14.171",
+    "bootstrap-sass": "^3.4.1",
     "core-js": "^3.15.2",
     "json-loader": "^0.5.7",
     "list-react-files": "^0.2.0",
+    "sass-loader": "^12.1.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
