--- a/static/package.json
+++ b/static/package.json
@@ -76,6 +76,7 @@
     "npm": "^7.20.1",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.1.1",
+    "precss": "^4.0.0",
     "q": "^1.5.1",
     "qs": "^6.10.1",
     "rc-datepicker": "^5.0.16",
@@ -97,6 +98,8 @@
     "redux-thunk": "^2.3.0",
     "resolve-url-loader": "^4.0.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.36.0",
+    "sass-loader": "^12.1.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.2.1",
     "ts-loader": "9.2.3",
@@ -116,12 +119,12 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@types/lodash": "^4.14.171",
+    "bootstrap": "^5.0.2",
     "core-js": "^3.15.2",
     "json-loader": "^0.5.7",
     "list-react-files": "^0.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "sass-loader": "^12.1.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
