--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,28 @@
-absl-py==0.6.1
-alembic==1.6.5
-apturl==0.5.2
-arxiv-latex-cleaner==0.1.15
-bcrypt==3.2.0
-blinker==1.4
-Brlapi==0.7.0
-certifi==2019.11.28
-cffi==1.14.6
-chardet==3.0.4
-click==8.0.1
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distro==1.4.0
-distro-info===0.23ubuntu1
-editdistance==0.5.3
-entrypoints==0.3
-Flask==2.0.0
+alembic==0.8.7
+bcrypt==3.1.0
+cffi==1.7.0
+click==6.6
+coverage==4.2
+Flask==0.11.1
 Flask-Bcrypt==0.7.1
-Flask-Login==0.5.0
-Flask-Migrate==2.4.0
-Flask-Script==2.0.6
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.0
-Guake==3.6.3
-httplib2==0.14.0
-idna==2.8
-itsdangerous==2.0.1
-Jinja2==3.0.1
-joblib==1.0.1
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-louis==3.12.0
-lxml==4.6.3
-macaroonbakery==1.3.1
-Mako==1.1.4
-MarkupSafe==2.0.1
-netifaces==0.10.4
-nltk==3.6.2
-numpy==1.21.1
-oauthlib==3.1.0
-olefile==0.46
-pandas==1.3.1
-pbr==5.4.5
-pexpect==4.6.0
-Pillow==7.0.0
-protobuf==3.6.1
-pycairo==1.16.2
-pycparser==2.20
-pycrypto==2.6.1
-pycups==1.9.73
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.5
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-python-editor==1.0.4
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-regex==2021.7.6
-reportlab==3.5.34
-requests==2.25.1
-requests-unixsocket==0.2.0
-rocketchat-API==1.7.0
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.16.0
-SQLAlchemy==1.4.22
-systemd-python==234
-tqdm==4.61.2
-ubuntu-advantage-tools==27.0
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-wadllib==1.3.3
-Werkzeug==2.0.1
-WTForms==2.3.3
-xkit==0.0.0
+Flask-Migrate==2.0.0
+Flask-Script==2.0.5
+Flask-Testing==0.5.0
+GitHub-Flask==3.1.3
+gunicorn==19.6.0
+itsdangerous==0.24
+Jinja2==2.8
+Mako==1.0.4
+MarkupSafe==0.23
+mysql-connector==2.1.4
+psycopg2==2.7.1
+py==1.4.31
+py-bcrypt==0.4
+pycparser==2.14
+pytest==3.0.1
+pytest-cov==2.3.1
+pytest-flask==0.10.0
+python-editor==1.0.1
+requests==2.11.1
+six==1.10.0
+Werkzeug==0.11.10
