--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
-alembic==0.8.7
-bcrypt==3.1.0
-cffi==1.7.0
-click==6.6
-coverage==4.2
-Flask==0.11.1
+bcrypt==3.2.0
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.3
+click==8.0.1
+editdistance==0.5.3
+Flask==2.0.1
 Flask-Bcrypt==0.7.1
-Flask-Migrate==2.0.0
-Flask-Script==2.0.5
-Flask-Testing==0.5.0
-GitHub-Flask==3.1.3
-gunicorn==19.6.0
-itsdangerous==0.24
-Jinja2==2.8
-Mako==1.0.4
-MarkupSafe==0.23
-mysql-connector==2.1.4
-psycopg2==2.7.1
-py==1.4.31
-py-bcrypt==0.4
-pycparser==2.14
-pytest==3.0.1
-pytest-cov==2.3.1
-pytest-flask==0.10.0
-python-editor==1.0.1
-requests==2.11.1
-six==1.10.0
-Werkzeug==0.11.10
+Flask-Login==0.5.0
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+joblib==1.0.1
+lxml==4.6.3
+MarkupSafe==2.0.1
+nltk==3.6.2
+numpy==1.21.1
+pandas==1.3.1
+pycparser==2.20
+python-dateutil==2.8.2
+pytz==2021.1
+regex==2021.7.6
+requests==2.26.0
+six==1.16.0
+tqdm==4.61.2
+urllib3==1.26.6
+Werkzeug==2.0.1
+WTForms==2.3.3
