--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.0.1
 editdistance==0.5.3
 Flask==2.0.1
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.10
 Flask-Login==0.5.0
 idna==3.2
 itsdangerous==2.0.1
